[gd_scene load_steps=2 format=3 uid="uid://touch123"]

[ext_resource type="Script" path="res://scripts/ui/TouchControls.gd" id="1_touch"]

[node name="TouchControls" type="CanvasLayer"]
layer = 5
script = ExtResource("1_touch")

[node name="LeftIndicator" type="ColorRect" parent="."]
visible = false
offset_right = 240.0
offset_bottom = 854.0
color = Color(0, 0.5, 1, 0.3)

[node name="RightIndicator" type="ColorRect" parent="."]
visible = false
offset_left = 240.0
offset_right = 480.0
offset_bottom = 854.0
color = Color(1, 0.5, 0, 0.3)

[node name="InfoContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 30

[node name="SpeedLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1.0, 0.7)
theme_override_font_sizes/font_size = 16
text = "SPEED: 0"

[node name="PhaseLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 1.0, 0.7)
theme_override_font_sizes/font_size = 16
text = ""

